--- a/api.html
+++ b/api.html
@@ -296,6 +296,10 @@ states is accumulated across all the <em>completed</em> iterations. </p></dd>
 
 </dl>
 
+    <div class="footer">
+      get the source code on GitHub : <a href="http://github.com/stig/AlphaBeta">stig/AlphaBeta</a>
+    </div>
+
   </div>
 
   <script type="text/javascript">
